2012-11-25  Andreas K. Foerster  <info@akfoerster.de>

	* text2c.awk: make static variable, support page-breaks

2012-11-24  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-sdl.c, avatar-linuxfb.c (avt_set_error):
	NULL or an empty message clears last error

2012-11-22  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_input):
	new function (undocumented, may still change)

2012-11-20  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-akfavatar-prg.c (check_filename, ask_file):
	also accept some kinds of text files

2012-11-17  Andreas K. Foerster  <info@akfoerster.de>

	* avtinternals.h, avatar.c (avt_input, avt_input_mb): new functions

	* lua/lua-avt.c (lavt_ask): extended

2012-11-16  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_bell_function): new function
	renamed from avt_alert:function, put into official API

2012-11-12  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_alert): new function

2012-11-07  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h: don't include SDL.h
	lua/lua-akfavatar-prg.c, example.c: include SDL.h conditionally

2012-11-05  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_bmp_data): new function

2012-10-29  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c, avatar-sdl.c
	(avt_register_keyhandler, avt_register_mousehandler):
	removed
	avtterm.c: adapted

	* akfavatar.h, avatar.c (avt_get_key): new function, replaces avt_key

	* avatar-linuxfb.c: new file

2012-10-26  Andreas K. Foerster  <info@akfoerster.de>

	* avttiming.c: new file

	* akfavatar.h (avt_elapsed): new macro

	* lua/lua-avt.c (lavt_key_pressed, lavt_clear_keys, lavt_push_key):
	new functions

2012-10-24  Andreas K. Foerster  <info@akfoerster.de>

	* data2c.awk: use static

2012-10-22  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c, avatar-sdl.c: split files

2012-10-20  Andreas K. Foerster  <info@akfoerster.de>
