@@ -4398,7 +4398,7 @@ avt_choice (int *result, int start_line, int items, int key,
       *result = -1;
 
       avt_clear_keys ();
-      avt_set_pointer_motion_key (0xF802);
+      avt_set_pointer_motion_key (0xE902);
       avt_set_pointer_buttons_key (AVT_KEY_ENTER);
 
       // check pointer position
@@ -4460,7 +4460,7 @@ avt_choice (int *result, int start_line, int items, int key,
 	  else if ((AVT_KEY_ENTER == ch or AVT_KEY_RIGHT == ch)
 		   and line_nr >= start_line and line_nr <= end_line)
 	    *result = line_nr - start_line + 1;
-	  else if (0xF802 == ch)	// mouse motion
+	  else if (0xE902 == ch)	// mouse motion
 	    {
 	      avt_get_pointer_position (&x, &y);
 
